--- a/index.html
+++ b/index.html
@@ -1,13 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>The Odin Project</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <title>Original Tombones</title>
+  </head>
+  <body>
+    <header id="header">
+      <img
+        id="header-img"
+        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+        alt="company logo"A
+        class="header-img"
+      />
+      <nav id="nav-bar">
+        <ul>
+          <li><a class="nav-link" href="#Features">Features</a></li>
+          <li><a class="nav-link" href="#How-it-works">How it works</a></li>
+          <li><a class="nav-link" href="#Pricing">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="form-section">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <h1>Handcrafted, home-made masterpieces</h1>
+          <input
+            id="email"
+            type="email"
+            name="email"
+            placeholder="Enter your email address"
+          />
+          <input id="submit" type="submit" value="GET STARTED" />
+        </form>
+      </section>
+      <section id="Features">
+        <div class="features-div">
+          <div class="feature">
+            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+            <div class="feature-details">
+              <h2 class="feature-title">Premium Materials</h2>
+              <p class="feature-description">
+                Our trombones use the shiniest brass which is sourced locally.
+                This will increase the longevity of your purchase.
+              </p>
+            </div>
+          </div>
 
-</head>
-<body>
-    
-</body>
+          <div class="feature">
+            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+            <div class="feature-details">
+              <h2 class="feature-title">Fast Shipping</h2>
+              <p class="feature-description">
+                We make sure you recieve your trombone as soon as we have
+                finished making it. We also provide free returns if you are not
+                satisfied.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature">
+            <div class="icon"><i class="fa fa-3x fa-battery-full"></i></div>
+            <div class="feature-details">
+              <h2 class="feature-title">Quality Assurance</h2>
+              <p class="feature-description">
+                For every purchase you make, we will ensure there are no damages
+                or faults and we will check and test the pitch of your
+                instrument.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="How-it-works">
+        <iframe
+          id="video"
+          src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=R36A8MiE9vuUXBHt"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope;"
+          allowfullscreen
+        ></iframe>
+      </section>
+      <section id="Pricing">
+        <div id="pricing-container">
+          <div class="item 1">
+            <h3>Tenor Trombone</h3>
+            <p class="price">$600</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <button class="select">SELECT</button>
+          </div>
+
+          <div class="item 2">
+            <h3>Bass Trombone</h3>
+            <p class="price">$900</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <button class="select">SELECT</button>
+          </div>
+
+          <div class="item 3">
+            <h3>Valve Trombone</h3>
+            <p class="price">$1200</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <p class="item-specs">Lorem ipsum.</p>
+            <button class="select">SELECT</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li><a>Privacy</a></li>
+        <li><a>Terms</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+      <p>Copyright 2016, Original Trombones</p>
+    </footer>
+  </body>
 </html>
