added the game function in javascript

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <p class="tip-text">(Press "S" key to select Scissors)</p>
       </div>
     </div>
+    <div class="status-display"></div>
   </div>
+  <div class="winMsg"><button class="replayBtn">Play again</button></div>
   <script src="script.js"></script>
 </body>
 
