--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
     <div class="selctor container">
       <div class="rock object">
         <p class="description">Rock</p>
-        <p class="tip-text">(Press "R" key to select Rock)</p>
       </div>
       <div class="paper object">
         <p class="description">Paper</p>
-        <p class="tip-text">(Press "P" key to select Paper)</p>
       </div>
       <div class="scissors object">
         <p class="description">Scissors</p>
-        <p class="tip-text">(Press "S" key to select Scissors)</p>
       </div>
     </div>
     <div class="status-display"></div>
   </div>
-  <div class="winMsg"><button class="replayBtn">Play again</button></div>
+  <div class="winMsg"><p></p><button class="replayBtn">Play again</button></div>
   <script src="script.js"></script>
 </body>
 
